--- a/package.json
+++ b/package.json
@@ -13,14 +13,10 @@
     "element-ui": "^2.11.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
-    "mavon-editor": "^2.6.17",
+    "postcss-px2rem": "^0.3.0",
+    "px2rem-loader": "^0.1.9",
     "vue": "^2.6.10",
-    "vue-cropperjs": "^3.0.0",
-    "vue-i18n": "^8.10.0",
-    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.3",
-    "vue-schart": "^2.0.0",
-    "vuedraggable": "^2.17.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
