--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "blueimp-md5": "^2.18.0",
     "element-ui": "^2.11.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
